--- a/Harlem Shake/Harlem Shake-Info.plist
+++ b/Harlem Shake/Harlem Shake-Info.plist
@@ -27,6 +27,8 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>video-camera
+video-camera</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
