--- a/HarlemShake/HarlemShake-Info.plist
+++ b/HarlemShake/HarlemShake-Info.plist
@@ -18,6 +18,8 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>iTunesURL</key>
+	<string>http://itunes.apple.com/us/app/HarlemShake/id604773218?mt=8</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
